<package format="3">
  <name>sensor_emulator</name>
  <version>0.0.1</version>
  <description>Simulates IMU data for the ROS 2 anti-drone system.</description>
  <maintainer email="syedahmed.zulfiqar@gmail.com">Syed Ahmed Zulfiqar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

